--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
        <title>ทดสอบ การรับค่าผ่านฟอร์ม คำนวณพื้นที่สี่เหลี่ยม</title>
    </head>
    <body>
-  <form action="test.php?id=5" method="post" name="frm_data">
+  <form action="test.php" method="post" name="frm_data">
     <table width="500">
    <caption><h3>ทดสอบ การรับ-ส่งค่าผ่านฟอร์ม</h3></caption>
    <tr>
